# nexus-spatial-testing

./: Cargo.toml
spatial-weaver/spatial-weaver-bevy/: Cargo.toml
spatial-weaver/spatial-weaver-bevy/examples/: main.rs
spatial-weaver/spatial-weaver-bevy/src/: config.rs  context.rs  lib.rs  ui.rs
spatial-weaver/spatial-weaver-bevy/src/ui/: context.rs  interactors.rs  mod.rs
spatial-weaver/spatial-weaver-bevy/src/ui/button/: mod.rs  rapier.rs
